hphp/hack/test/package/strict_isolation/attribute_cross_package_forbidden.php.exp
error: Typing[4472] Cannot access attribute `IsolatedAttr` defined in package `isolated` which may not be available [1]
-> `IsolatedAttr` is defined in attribute_cross_package_forbidden.php--isolated/attr.php [2]
-> `IsolatedAttr` belongs to package `isolated` by this package definition [3]
-> package `intern` is available because the current file belongs to it by this package definition [4]
-> `intern` includes `shared` via its definition [5]

attribute_cross_package_forbidden.php--intern/use.php:4:3
 2 | // `intern` does not include `isolated`, so referencing its attribute is a
 3 | // package violation for the strict-isolation package.
 4 | <<IsolatedAttr>>
   |   ^^^^^^^^^^^^ [1]
 5 | function use_isolated_attr(): void {}

attribute_cross_package_forbidden.php--isolated/attr.php:3:7
 1 | <?hh
 2 | // A user attribute class defined in the strict-isolation package `isolated`.
 3 | class IsolatedAttr implements HH\FunctionAttribute {
   |       ^^^^^^^^^^^^ [2]
 4 |   public function __construct() {}
 5 | }

PACKAGES.toml:14:11
 4 | include_paths = ["//shared/"]
 5 | 
 6 | [packages.intern]
   |           ^^^^^^ [4]
 7 | include_paths = ["//intern/"]
 8 | includes = ["shared"]
   |             ^^^^^^^^ [5]
 9 | 
10 | # A package that opts into strict isolation. Its presence may not be dynamically
11 | # observed (no `package` expression / `__RequirePackage`), and
12 | # package_exclude_patterns (e.g. __tests__) do not grant a typecheck exemption
13 | # for references into it.
14 | [packages.isolated]
   |           ^^^^^^^^ [3]
15 | include_paths = ["//isolated/"]
16 | includes = ["intern", "shared"]

1 error found
